--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
 NODE_ENV=production
-PUBLIC_PATH=
+PUBLIC_PATH=https://mfe-module-federation-vue-auth.netlify.app/
 
 REMOTE_ROOT=root@https://mfe-module-federation-vue-root.netlify.app/remoteEntry.js
