--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ NODE_ENV=development
 PUBLIC_PATH=http://localhost:3006/
 
 REMOTE_ROOT=root@http://localhost:3000/remoteEntry.js
+REMOTE_AUTH=auth@http://localhost:3006/remoteEntry.js
+REMOTE_STORE=store@http://localhost:3005/remoteEntry.js
