--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@mfe-module-federation-vue/dealful-package": "^0.0.1",
     "core-js": "^3.6.5",
+    "firebase": "^8.9.0",
     "http-server": "^0.12.3",
     "vue": "^2.6.11",
     "vuetify": "^2.4.0"
