--- a/.env.other
+++ b/.env.other
@@ -2,3 +2,4 @@ NODE_ENV=production
 PUBLIC_PATH=http://localhost:3006/
 
 REMOTE_ROOT=root@http://localhost:3000/remoteEntry.js
+REMOTE_DS=ds@http://localhost:3007/remoteEntry.js
