chore: fixin npmrc

--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,2 @@
-//registry.npmjs.org/:_authToken=97e78321-793c-445b-9d68-436004455287
+//npm.pkg.github.com/:_authToken={NPM_TOKEN}
+@mfe-module-federation-vue:registry=https://npm.pkg.github.com
