--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
-//npm.pkg.github.com/:_authToken={NPM_TOKEN}
+//npm.pkg.github.com/:_authToken=${NPM_TOKEN}
 @mfe-module-federation-vue:registry=https://npm.pkg.github.com
